--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
+                        android:textSize="16sp"
                         android:textColor="@color/text_color"
                         android:text="@string/default_text"
                         />
@@ -78,21 +79,13 @@
                         android:layout_marginLeft="4dp"
                         android:layout_gravity="center_vertical"
                         android:textColor="@color/text_color"
+                        android:textSize="16dp"
                         android:text="@string/default_text"
 
 
                         />
                 </LinearLayout>
-                <TextView
-                    android:id="@+id/tv_now_temp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/default_text"
 
-                    android:layout_marginTop="16dp"
-                    android:textColor="@color/text_color"
-                    android:textSize="12sp"
-                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -105,7 +98,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/text_color"
                         android:layout_weight="1"
-                        android:textSize="30sp"
+                        android:textSize="24sp"
                         android:text="25"
 
                         />
@@ -159,13 +152,16 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/wireframe_light"
+                    android:background="@drawable/wireframe"
                     android:orientation="vertical"
                     >
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/dark_grey"
+                        android:layout_gravity="center"
+                        android:textSize="16sp"
+                        android:layout_marginTop="4dp"
                         android:layout_marginBottom="4dp"
                         android:text="@string/forecast"
                         />
@@ -174,98 +170,98 @@
                         android:layout_height="1px"
                         android:background="@color/dark_grey" />
                     <!--<LinearLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!-->-->
-                        <!--<TextView-->
-                            <!--android:id="@+id/tv_next_three"-->
-                            <!--style="@style/TextViewStyle"-->
-                            <!--android:text="@string/default_text"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!-->-->
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_next_three"-->
+                    <!--style="@style/TextViewStyle"-->
+                    <!--android:text="@string/default_text"-->
 
-                            <!--/>-->
-                        <!--<TextView-->
-                            <!--android:id="@+id/tv_next_six"-->
-                            <!--style="@style/TextViewStyle"-->
-                            <!--android:text="@string/default_text"-->
-                            <!--/>-->
-                        <!--<TextView-->
-                            <!--android:id="@+id/tv_next_nine"-->
-                            <!--style="@style/TextViewStyle"-->
-                            <!--android:text="@string/default_text"-->
-                            <!--/>-->
-                        <!--<TextView-->
-                            <!--android:id="@+id/tv_next_twelve"-->
-                            <!--style="@style/TextViewStyle"-->
-                            <!--android:text="@string/default_text"-->
-                            <!--/>-->
-                        <!--<TextView-->
-                            <!--android:id="@+id/tv_next_fifteen"-->
-                            <!--style="@style/TextViewStyle"-->
-                            <!--android:text="@string/default_text"-->
-                            <!--/>-->
+                    <!--/>-->
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_next_six"-->
+                    <!--style="@style/TextViewStyle"-->
+                    <!--android:text="@string/default_text"-->
+                    <!--/>-->
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_next_nine"-->
+                    <!--style="@style/TextViewStyle"-->
+                    <!--android:text="@string/default_text"-->
+                    <!--/>-->
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_next_twelve"-->
+                    <!--style="@style/TextViewStyle"-->
+                    <!--android:text="@string/default_text"-->
+                    <!--/>-->
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_next_fifteen"-->
+                    <!--style="@style/TextViewStyle"-->
+                    <!--android:text="@string/default_text"-->
+                    <!--/>-->
 
                     <!--</LinearLayout>-->
 
                     <!--<LinearLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content">-->
-                        <!--<ImageView-->
-                            <!--android:id="@+id/iv_next_three"-->
-                            <!--style="@style/ViewStyle"-->
-                            <!--android:src="@drawable/d00"-->
-                            <!--/>-->
-                        <!--<ImageView-->
-                            <!--android:id="@+id/iv_next_six"-->
-                            <!--style="@style/ViewStyle"-->
-                            <!--android:src="@drawable/d00"-->
-                            <!--/>-->
-                        <!--<ImageView-->
-                            <!--android:id="@+id/iv_next_nine"-->
-                            <!--style="@style/ViewStyle"-->
-                            <!--android:src="@drawable/d00"-->
-                            <!--/>-->
-                        <!--<ImageView-->
-                            <!--android:id="@+id/iv_next_twelve"-->
-                            <!--style="@style/ViewStyle"-->
-                            <!--android:src="@drawable/d00"-->
-                            <!--/>-->
-                        <!--<ImageView-->
-                            <!--android:id="@+id/iv_next_fifteen"-->
-                            <!--style="@style/ViewStyle"-->
-                            <!--android:src="@drawable/d00"-->
-                            <!--/>-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content">-->
+                    <!--<ImageView-->
+                    <!--android:id="@+id/iv_next_three"-->
+                    <!--style="@style/ViewStyle"-->
+                    <!--android:src="@drawable/d00"-->
+                    <!--/>-->
+                    <!--<ImageView-->
+                    <!--android:id="@+id/iv_next_six"-->
+                    <!--style="@style/ViewStyle"-->
+                    <!--android:src="@drawable/d00"-->
+                    <!--/>-->
+                    <!--<ImageView-->
+                    <!--android:id="@+id/iv_next_nine"-->
+                    <!--style="@style/ViewStyle"-->
+                    <!--android:src="@drawable/d00"-->
+                    <!--/>-->
+                    <!--<ImageView-->
+                    <!--android:id="@+id/iv_next_twelve"-->
+                    <!--style="@style/ViewStyle"-->
+                    <!--android:src="@drawable/d00"-->
+                    <!--/>-->
+                    <!--<ImageView-->
+                    <!--android:id="@+id/iv_next_fifteen"-->
+                    <!--style="@style/ViewStyle"-->
+                    <!--android:src="@drawable/d00"-->
+                    <!--/>-->
                     <!--</LinearLayout>-->
                     <!-- -->
                     <!--<LinearLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!-->-->
-                        <!--<TextView-->
-                            <!--android:id="@+id/tv_temp_three"-->
-                            <!--style="@style/TextViewStyle"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!-->-->
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_temp_three"-->
+                    <!--style="@style/TextViewStyle"-->
 
-                            <!--android:text="@string/default_text"-->
-                            <!--/>-->
-                        <!--<TextView-->
-                            <!--android:id="@+id/tv_temp_six"-->
-                            <!--style="@style/TextViewStyle"-->
-                            <!--android:text="@string/default_text"-->
-                            <!--/>-->
-                        <!--<TextView-->
-                            <!--android:id="@+id/tv_temp_nine"-->
-                            <!--style="@style/TextViewStyle"-->
-                            <!--android:text="@string/default_text"-->
-                            <!--/>-->
-                        <!--<TextView-->
-                            <!--android:id="@+id/tv_temp_twelve"-->
-                            <!--style="@style/TextViewStyle"-->
-                            <!--android:text="@string/default_text"-->
-                            <!--/>-->
-                        <!--<TextView-->
-                            <!--android:id="@+id/tv_temp_fifteen"-->
-                            <!--style="@style/TextViewStyle"-->
-                            <!--android:text="@string/default_text"-->
-                            <!--/>-->
+                    <!--android:text="@string/default_text"-->
+                    <!--/>-->
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_temp_six"-->
+                    <!--style="@style/TextViewStyle"-->
+                    <!--android:text="@string/default_text"-->
+                    <!--/>-->
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_temp_nine"-->
+                    <!--style="@style/TextViewStyle"-->
+                    <!--android:text="@string/default_text"-->
+                    <!--/>-->
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_temp_twelve"-->
+                    <!--style="@style/TextViewStyle"-->
+                    <!--android:text="@string/default_text"-->
+                    <!--/>-->
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_temp_fifteen"-->
+                    <!--style="@style/TextViewStyle"-->
+                    <!--android:text="@string/default_text"-->
+                    <!--/>-->
 
                     <!--</LinearLayout>-->
                     <!--<View
@@ -310,7 +306,7 @@
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1px"
-                            android:background="@color/dark_grey" />
+                            android:background="@color/light_grey" />
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -346,7 +342,7 @@
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1px"
-                            android:background="@color/dark_grey" />
+                            android:background="@color/light_grey" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -430,8 +426,12 @@
 
                     >
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="4dp"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="16sp"
                         android:text="@string/detail_information"
                         />
                     <View
@@ -557,6 +557,7 @@
             </LinearLayout>
 
         </ScrollView>
+
 
 
 
