--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
                         android:text="@string/default_text"
                         />
                     <ImageView
+                        android:id="@+id/button_city"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@id/tv_city"
@@ -160,7 +161,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/dark_grey"
                         android:layout_gravity="center"
-                        android:textSize="16sp"
+                        android:textSize="18sp"
                         android:layout_marginTop="4dp"
                         android:layout_marginBottom="4dp"
                         android:text="@string/forecast"
@@ -272,37 +273,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            >
-                            <TextView
-                                android:id="@+id/tv_today"
-                                style="@style/TextViewStyle"
-                                android:text="@string/today"
-                                android:layout_weight="3"
-                                />
-                            <ImageView
-                                android:id="@+id/iv_today_weather"
-                                style="@style/ViewStyle"
-                                android:layout_weight="4"
-                                android:src="@drawable/d00"
-                                />
-                            <TextView
-                                android:id="@+id/tv_today_temp_a"
-                                style="@style/TextViewStyle"
-                                android:layout_weight="4"
-                                android:text="@string/default_text"
-
-                                />
-                            <TextView
-                                android:id="@+id/tv_today_temp_b"
-                                style="@style/TextViewStyle"
-                                android:layout_weight="4"
-                                android:text="@string/default_text"
-                                />
-                        </LinearLayout>
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1px"
@@ -310,32 +280,32 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="16dp"
                             >
                             <TextView
                                 android:id="@+id/tv_tomorrow"
-                                style="@style/TextViewStyle"
+                                style="@style/TextViewStyleFuture"
                                 android:text="@string/default_text"
 
-                                android:layout_weight="3"
+                                android:layout_weight="1"
                                 />
                             <ImageView
                                 android:id="@+id/iv_tomorrow_weather"
                                 style="@style/ViewStyle"
-                                android:layout_weight="4"
+                                android:layout_weight="1"
                                 android:src="@drawable/d00"
                                 />
                             <TextView
                                 android:id="@+id/tv_tomorrow_temp_a"
-                                style="@style/TextViewStyle"
-                                android:layout_weight="4"
+                                style="@style/TextViewStyleFuture"
+                                android:layout_weight="1"
                                 android:text="@string/default_text"
 
                                 />
                             <TextView
                                 android:id="@+id/tv_tomorrow_temp_b"
-                                style="@style/TextViewStyle"
-                                android:layout_weight="4"
+                                style="@style/TextViewStyleFuture"
+                                android:layout_weight="1"
                                 android:text="@string/default_text"
                                 />
                         </LinearLayout>
@@ -347,32 +317,32 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="16dp"
                             >
                             <TextView
                                 android:id="@+id/tv_third"
-                                style="@style/TextViewStyle"
+                                style="@style/TextViewStyleFuture"
                                 android:text="@string/default_text"
 
-                                android:layout_weight="3"
+                                android:layout_weight="1"
                                 />
                             <ImageView
                                 android:id="@+id/iv_third_weather"
                                 style="@style/ViewStyle"
-                                android:layout_weight="4"
+                                android:layout_weight="1"
                                 android:src="@drawable/d00"
                                 />
                             <TextView
                                 android:id="@+id/tv_third_temp_a"
-                                style="@style/TextViewStyle"
-                                android:layout_weight="4"
+                                style="@style/TextViewStyleFuture"
+                                android:layout_weight="1"
                                 android:text="@string/default_text"
 
                                 />
                             <TextView
                                 android:id="@+id/tv_third_temp_b"
-                                style="@style/TextViewStyle"
-                                android:layout_weight="4"
+                                style="@style/TextViewStyleFuture"
+                                android:layout_weight="1"
                                 android:text="@string/default_text"
                                 />
                         </LinearLayout>
@@ -381,32 +351,32 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginBottom="16dp"
                             >
                             <TextView
                                 android:id="@+id/tv_fourth"
-                                style="@style/TextViewStyle"
+                                style="@style/TextViewStyleFuture"
                                 android:text="@string/default_text"
-
-                                android:layout_weight="3"
+                                android:layout_weight="1"
                                 />
                             <ImageView
                                 android:id="@+id/iv_fourth_weather"
                                 style="@style/ViewStyle"
-                                android:layout_weight="4"
+                                android:layout_weight="1"
                                 android:src="@drawable/d00"
                                 />
                             <TextView
                                 android:id="@+id/tv_fourth_temp_a"
-                                style="@style/TextViewStyle"
-                                android:layout_weight="4"
+                                style="@style/TextViewStyleFuture"
+                                android:layout_weight="1"
                                 android:text="@string/default_text"
 
                                 />
                             <TextView
                                 android:id="@+id/tv_fourth_temp_b"
-                                style="@style/TextViewStyle"
-                                android:layout_weight="4"
+                                style="@style/TextViewStyleFuture"
+                                android:layout_weight="1"
                                 android:text="@string/default_text"
                                 />
                         </LinearLayout>
@@ -547,10 +517,27 @@
                             style="@style/TextViewStyle"
                             android:gravity="left"
                             android:paddingLeft="16dp"
-                            android:text="@string/default_text"
+                            android:text="@string/default_text"/>
+                    </LinearLayout>
 
-
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        >
+                        <TextView
+                            style="@style/TextViewStyle"
+                            android:gravity="left"
+                            android:text="@string/exercise_index"
+                            android:paddingLeft="16dp"
                             />
+                        <TextView
+                            android:id="@+id/tv_exercise_index"
+                            style="@style/TextViewStyle"
+                            android:gravity="left"
+                            android:paddingLeft="16dp"
+                            android:text="@string/default_text"/>
                     </LinearLayout>
                 </LinearLayout>
 
