--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,11 @@
     <style name="TextViewStyle" parent="ViewStyle">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/text_color</item>
+    </style>
 
+    <style name="TextViewStyleFuture" parent="ViewStyle">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/text_color</item>
     </style>
 
 </resources>
