--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -9,14 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
-        android:background="#496491"
+        android:background="#4DB6AC"
         android:paddingLeft="8dp"
         android:text="A"
         android:textColor="#ffffff"
         android:textSize="18sp"
         android:visibility="gone" />
     <!--android:textStyle="bold"-->
-
+    <!--#496491-->
 
     <RelativeLayout
         android:id="@+id/infoRowContainer"
