--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -27,9 +27,10 @@
     <color name="gold_player">#F7F466</color>
     <color name="whitetran">#87FFFFFF</color>
     <color name="divider_line">#FF575757</color>
-
-    <color name="listview_item_normal">#eef0ed</color>
-    <color name="listview_item_pressed">#d4d4d4</color>
+    <!--#eef0ed-->
+    <!--#d4d4d4-->
+    <color name="listview_item_normal">#F5F5F5</color>
+    <color name="listview_item_pressed">#E0E0E0</color>
 
     <color name="message_checked">#90918f</color>
     <color name="message_no_check">#323232</color>
