--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/background"
     >
     <TextView
@@ -10,18 +12,16 @@
         android:layout_marginTop="200dp"
         android:layout_marginLeft="30dp"
         android:text="请选择你所在的城市"
-
         android:textSize="24sp"/>
-    <Button
+    <com.gc.materialdesign.views.ButtonRectangle
         android:id="@+id/button_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/tv_select"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="180dp"
         android:layout_marginLeft="20dp"
-        android:textSize="18sp"
-        android:textColor="@color/background"
-        android:background="@color/white"
+        android:textSize="10sp"
+        android:background="#00796B"
         android:text="选择"
         />
 
